2007-01-20  George Ogata  <george.ogata@gmail.com>

	* lib/cast/parse.rb (Declarator::self.parse): Allow specification
	of #num_bits.

2006-05-07  George Ogata  <george.ogata@gmail.com>

	* lib/cast/preprocessor.rb: Added C::Preprocessor, a preprocessor
	  that wraps around the command in Config::CONFIG['CPP'].  Assumes
	  POSIX-style -D and -I options.

2006-05-06  George Ogata  <george.ogata@gmail.com>

	* lib/cast/c_nodes.rb: Added fields:
		+ CharLiteral#prefix
		+ StringLiteral#prefix

	  For StringLiteral and CharLiteral, added optional parameter for
	  #prefix to #initialize.  Also, #wide? and #wide= are now methods
	  rather than fields.

	  For IntLiteral and FloatLiteral, #format now comes first in the
	  list of fields.

	* ext/yylex.re (yylex): Restrict IntLiteral suffixes to those in
	  C99, so cases like 2e-2 are now parsed correctly.  Also, allow
	  newlines in StringLiterals and CharLiterals.

	* lib/cast/c.y (on_error): Made parse error message more meaningful.

2006-04-26  George Ogata  <george.ogata@gmail.com>

	* Release 0.1.0.

	* Rejigged gemspec to compile new lexer on installation.

	* Moved lib files under lib/cast so they don't all end up directly
	  in the load path.

	* Merged install.rb into Rakefile.

2005-07-17  George Ogata  <george.ogata@gmail.com>

	* src/parser.c: Born.

	* src/cast_core.c: Born.

	* pre/yylex.re: Born.

	* include/cast.h: Born.

	* lib/c.y (next_token): Wrote the lexer in C.

	* test/*: merged common.rb into run.rb.

2005-07-10  George Ogata  <george.ogata@gmail.com>

	* lib/c_nodes.rb: Added fields:
		+ StringLiteral#wide?
		+ CharLiteral#wide?
		+ IntLiteral#suffix
		+ FloatLiteral#format
		+ FloatLiteral#suffix

2005-03-14  George Ogata  <george.ogata@gmail.com>

	* lib/c.y: Allow type names in Call#args.  (Not C99, but useful
	  for macros.)

2005-03-07  George Ogata  <george.ogata@gmail.com>

	* lib/to_s.rb (CompoundLiteral::to_s): Made it work.

2005-02-26  George Ogata  <george.ogata@gmail.com>
